--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    google-site-verification: google9a4280d395f4e78f.html
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Red Ifat Camel Canada - Premium Canadian Legumes</title>
@@ -1061,4 +1062,5 @@
         });
     </script>
 </body>
+
 </html>
