--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <google-site-verification: google9a4280d395f4e78f.html>
+    <meta name="google-site-verification: google9a4280d395f4e78f.html" content="aLongStringOfRandomLettersAndNumbers" /> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Red Ifat Camel Canada - Premium Canadian Legumes</title>
@@ -1064,4 +1064,5 @@
 </body>
 
 </html>
+
 
